# kernel_image_processing_CUDA

./: CMakeLists.txt  README.md
resources/results/: deer480pCudaAoSOutlineNaiveBlockW32.ppm  deer480pCudaAoSSharpenTilingTileW32.ppm
resources/source/: deer480p.ppm  flower360p.ppm  flower480p.ppm  lion480p.ppm
src/: main.cu
src/convolution/: Convolution.cu  Convolution.cuh
src/image/: Image.cpp  Image.h  ImageSoA.cpp  ImageSoA.h  PpmParser.cpp  PpmParser.h
src/kernel/: Kernel.cpp  Kernel.h
src/utils/: Utils.h
